# video-analysis

./: pyproject.toml
app/: clip_index.py  main.py  models.py  routes.py  store.py  video_utils.py
frontend/: .cta.json  README.md  package.json  vite.config.ts
frontend/src/: routeTree.gen.ts  router.tsx  styles.css
frontend/src/components/: activity-panel.tsx  body.tsx  card.tsx  dashboard-layout.tsx  header.tsx  sidebar.tsx  toolbar.tsx  video-detail-page.tsx  video-detail-panel.tsx  video-filter.tsx  video-group-card.tsx  video-js-player.tsx  video-player.tsx
frontend/src/db/: index.ts
frontend/src/db/schemas/: auth.ts
frontend/src/integrations/better-auth/: header-user.tsx
frontend/src/integrations/tanstack-query/: root-provider.tsx
frontend/src/lib/: api.ts
frontend/src/routes/: __root.tsx  index.tsx
frontend/src/routes/video/: $videoId.tsx
frontend/src/stores/: activity.ts  player.ts  video-detail-panel.ts
